[package]
name = "maceats-server"
version = "0.0.0"
edition = "2021"
description = "An API for MacEats."
authors = ["Vidhan Bhatt <me@vidhan.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/vidhanio/maceats"
readme = "README.md"
keywords = ["maceats", "api", "wrapper"]
categories = ["api-bindings", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.0.18", features = ["derive"] }
color-eyre = "0.6.2"
log = "0.4.17"
maceats = "0.0.0"
once_cell = "1.16.0"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.145", features = ["derive"] }
sled = "0.34.7"
tokio = "1.24.2"
tokio-cron-scheduler = "0.8.1"
warp = "0.3.3"
