[package]
name = "maceats"
version = "0.0.0"
edition = "2021"
description = "An API wrapper for MacEats."
authors = ["Vidhan Bhatt <me@vidhan.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/vidhanio/maceats"
readme = "README.md"
keywords = ["maceats", "api", "wrapper"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
log = "0.4.17"
reqwest = "0.11.12"
scraper = "0.13.0"
chrono = { version = "0.4.22", features = ["serde"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
heck = "0.4.0"
thiserror = "1.0.37"
url = { version = "2.3.1", features = ["serde"] }
once_cell = "1.15.0"
selectors = "^0.22.0"
regex = "1.6.0"
futures = "0.3.24"
