[package]
name = "maceats-server"
version = "0.0.0"
edition = "2021"
description = "An API for MacEats."
authors = ["Vidhan Bhatt <me@vidhan.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/vidhanio/maceats"
readme = "README.md"
keywords = ["maceats", "api", "wrapper"]
categories = ["api-bindings", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
serde = { version = "1.0.145", features = ["derive"] }
sled = "0.34.7"
warp = "0.3.3"
